--- a/First-exercise/firstEx.html
+++ b/First-exercise/firstEx.html
@@ -28,13 +28,7 @@
         </div>
         <div class="d-flex flex-column ms-5">
           <button type="submit" class="btn btn-primary mb-3">Salva</button>
-          <button
-            type="button"
-            class="btn btn-danger"
-            onclick="localStorage.clear(); location.reload();"
-          >
-            Elimina Tutto
-          </button>
+          <button type="button" class="btn btn-danger">Elimina Tutto</button>
         </div>
       </form>
       <div id="savedValue" class="mt-3"></div>
@@ -45,6 +39,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./script.js"></script>
+    <script src="./firstEx.js"></script>
   </body>
 </html>
