--- a/Second-exercise/secEx.html
+++ b/Second-exercise/secEx.html
@@ -14,8 +14,10 @@
   <body>
     <!-- Crea un contatore che tenga conto del tempo che passa, utilizzando sessionStorage. Aggiornando la pagina il valore prosegue, chiudendo la pagina - ovviamente - ricomincia. Il valore del contatore deve aggiornarsi ad ogni secondo. -->
     <div class="container text-center mt-5">
-      <h1>Contatore Tempo</h1>
-      <div class="seconds"></div>
+      <h1>Contatore tempo</h1>
+      <div class="text-center mt-3">
+        Secondi trascorsi: <span id="seconds"></span>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
